# Enum-Flags

./: CITATION.cff  CMakeLists.txt  README.md
.github/workflows/: cmake-gtest.yaml
include/enum_flags/: enum_flags.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  enum_flags_tests.cpp
